List of short link by specified user
